--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -79,6 +79,9 @@
     .sidebarMenuItem{
         margin-bottom: 10px;
     }
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .themeToggleBtn{
